Really fixed hero image on iPhone in landscape mode.

--- a/_sass/_homepage.sass
+++ b/_sass/_homepage.sass
@@ -16,8 +16,9 @@
 
   @include small
     background-position: top right
-    background-attachment: fixed
 
+  @include medium
+    background-attachment: fixed
 #ethics
   background-color: #fff
   padding: ms(6) 5% ms(7)
